Add video player

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Amaze File Utilities</string>
     <string name="app_version" translatable="false">v1.0</string>
     <string name="image_viewer">Amaze Image Viewer</string>
+    <string name="video_player">Amaze Video Player</string>
     <string name="welcome_launcher">Thank you for purchasing Amaze File Utilities. Your support is greatly appreciated.
         Feel free to contact us on our telegram channel @AmazeFileManager
     </string>
@@ -10,6 +11,7 @@
         when opening your media files from any file manager</string>
     <string name="please_rate">Please rate</string>
     <string name="intent_image_viewer">Amaze Image Viewer</string>
+    <string name="intent_video_player">Amaze Video Player</string>
     <string name="grantfailed">Storage permission not granted</string>
     <string name="grant_storage_read_permission">App needs storage read permissions for optimal performance.</string>
     <string name="grant_permission">Grant permission</string>
