Add music player

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_version" translatable="false">v1.0</string>
     <string name="image_viewer">Amaze Image Viewer</string>
     <string name="video_player">Amaze Video Player</string>
+    <string name="audio_player">Amaze Music Player</string>
     <string name="welcome_launcher">Thank you for purchasing Amaze File Utilities. Your support is greatly appreciated.
         Feel free to contact us on our telegram channel @AmazeFileManager
     </string>
