Fix audio player notification

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="play">Play</string>
     <string name="previous">Previous</string>
     <string name="next">Next</string>
+    <string name="not_allowed">Not allowed</string>
     <string name="channel_name_normal">Amaze File Utilities</string>
     <string name="storage_permission_granted">Storage permission granted</string>
     <string name="audio_player_service_description">Plays audio for Amaze File Utilities</string>
