--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="video_player">Amaze Video Player</string>
     <string name="audio_player">Amaze Music Player</string>
     <string name="pdf_viewer">Amaze Pdf Viewer</string>
+    <string name="epub_viewer">Epub Viewer</string>
     <string name="welcome_launcher">Thank you for purchasing Amaze File Utilities. Your support is greatly appreciated.
         Feel free to contact us on our telegram channel @AmazeFileManager
     </string>
@@ -26,4 +27,6 @@
     <string name="channel_name_normal">Amaze File Utilities</string>
     <string name="storage_permission_granted">Storage permission granted</string>
     <string name="audio_player_service_description">Plays audio for Amaze File Utilities</string>
+    <string name="invert_colors">Invert colors</string>
+    <string name="loading">Loading…</string>
 </resources>
