--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="audio_player">Amaze Music Player</string>
     <string name="pdf_viewer">Amaze Pdf Viewer</string>
     <string name="epub_viewer">Epub Viewer</string>
+    <string name="docx_viewer">Doc Viewer</string>
     <string name="welcome_launcher">Thank you for purchasing Amaze File Utilities. Your support is greatly appreciated.
         Feel free to contact us on our telegram channel @AmazeFileManager
     </string>
