Implement homescreen livedata models

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="num_of_files">%s Files</string>
     <string name="send">Send</string>
     <string name="receive">Receive</string>
+    <string name="undetermined" translatable="false">--</string>
 </resources>
