Implement media files adapter; implement sorter; add recent files recycler view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,5 @@
     <string name="receive">Receive</string>
     <string name="undetermined" translatable="false">--</string>
     <string name="calculating">Calculating…</string>
+    <string name="recent_files">Recent Files</string>
 </resources>
