--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,5 @@
     <string name="internal_storage_subs">Internal Storage: %s</string>
     <string name="action_bar_search_hint">Search for files…</string>
     <string name="please_wait">Please wait…</string>
+    <string name="its_quiet_here">It\'s quiet in here…</string>
 </resources>
