Fix audio player bottom sheet; open amaze fm on internal storage tap

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,5 @@
     <string name="pre_production">This is a pre-production copy. Redistribution is strictly prohibited.</string>
     <string name="licenses">Licenses</string>
     <string name="libraries">Libraries</string>
+    <string name="install_amaze">Please install Amaze File Manager to manage internal storage</string>
 </resources>
