Minor layout fixes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,11 +56,12 @@
     <string name="its_quiet_here">It\'s quiet in here…</string>
     <string name="settings">Settings</string>
     <string name="about">About</string>
-    <string name="rights_reserved">Copyright © 2021–2022 All Rights Reserved</string>
+    <string name="rights_reserved">Copyright © 2021–2022\nAll Rights Reserved</string>
     <string name="open_source_licenses">Open-source licenses</string>
     <string name="privacy_policy">Privacy Policy</string>
     <string name="pre_production">This is a pre-production copy. Redistribution is strictly prohibited.</string>
     <string name="licenses">Licenses</string>
     <string name="libraries">Libraries</string>
     <string name="install_amaze">Please install Amaze File Manager to manage internal storage</string>
+    <string name="version" translatable="false">v0.1</string>
 </resources>
