Few bugfixes in audio player

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,4 +65,5 @@
     <string name="install_amaze">Please install Amaze File Manager to manage internal storage</string>
     <string name="version" translatable="false">v0.1</string>
     <string name="information">Information</string>
+    <string name="unsupported_content">Unsupported content</string>
 </resources>
