--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="app_version" translatable="false">v1.0</string>
     <string name="image_viewer">Amaze Image Viewer</string>
     <string name="video_player">Amaze Video Player</string>
-    <string name="audio_player">Amaze Music Player</string>
+    <string name="amaze_audio_player">Amaze Music Player</string>
     <string name="pdf_viewer">Amaze Pdf Viewer</string>
     <string name="epub_viewer">Epub Viewer</string>
     <string name="docx_viewer">Doc Viewer</string>
@@ -131,4 +131,8 @@
     <string name="junk_files_hint">Junk files are files that are left over from uninstalled apps</string>
     <string name="more_to_come">More optimizations to come!</string>
     <string name="view_all">View all</string>
+    <string name="analysis">Analysis</string>
+    <string name="exclusions">Exclusions</string>
+    <string name="exclusions_summary">Paths to exclude while scanning media</string>
+    <string name="audio_player">Audio Player</string>
 </resources>
