Implement reset analysis preference

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -170,5 +170,5 @@
     <string name="cluttered_videos_hint">A group of videos that have similar running time.
         Most likely to be un-useful videos.</string>
     <string name="reanalyse">Re-analyse</string>
-    <string name="reanalyse_hint">Clears existing analysis and starts again</string>
+    <string name="reanalyse_hint">Clears existing analysis data and starts again</string>
 </resources>
