Hide sync subs option temporarily

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -252,6 +252,7 @@
     <string name="failed_to_gain_focus">Failed to gain audio focus</string>
     <string name="open">Open</string>
     <string name="search">Search</string>
+    <string name="search_online">Search online</string>
     <string name="synchronize">Synchronize</string>
     <string name="download_subtitles">Download subtitles</string>
     <string name="download_subtitles_info">Enter keywords and select your language to search subtitles from <html><body><font color='#FF4287f5'>opensubtitles.org</font></body></html></string>
